# one_billion_row_challenge_python

./: README.md  pyproject.toml
src/: create_measurements.py  using_polars.py
