[tool.poetry]
name = "one-billion-row-challenge-python"
version = "0.1.1"
description = ""
authors = ["Luciano Filho <lvgalvaofilho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.4"
polars = "0.20.31"
pyarrow = "^16.1"
duckdb = "1.0.0"
modin = {extras = ["dask"], version = "^0.30.1"}
dask = {extras = ["complete"], version = "^2024.6.2"}
dask-expr = "^1.1.6"
tqdm = "^4.66.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
